Added Login Page

--- a/Frontend/OnlineExaminationSystem/src/app/auth/login/login.component.html
+++ b/Frontend/OnlineExaminationSystem/src/app/auth/login/login.component.html
@@ -1,1 +1,20 @@
-<p class="text text-danger">login works!</p>
+<div class="container-fluid">
+    <div class="row d-flex justify-content-center">
+        <div class="col-12 col-sm-6 col-md-4 col-xs-12">
+            <div class="form-container">
+                <p class="h4 text-center">Login Form</p>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div class="d-grid gap-2">
+                    <button class="btn btn-success" type="button">Button</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
