--- a/Frontend/OnlineExaminationSystem/src/app/auth/login/login.component.css
+++ b/Frontend/OnlineExaminationSystem/src/app/auth/login/login.component.css
@@ -5,3 +5,13 @@
     background-color: #fff;
     box-shadow: 0px 0px 10px 0px;
 }
+
+.bg-img{
+    min-height: 100Vh;
+    width: 100%;
+    background: url('src/assets/Images/background.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
