--- a/Frontend/OnlineExaminationSystem/src/app/auth/login/login.component.html
+++ b/Frontend/OnlineExaminationSystem/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid bg-img">
     <div class="row d-flex justify-content-center">
         <div class="col-12 col-sm-6 col-md-4 col-xs-12">
             <div class="form-container">
