--- a/Frontend/OnlineExaminationSystem/src/app/pages/department/department.component.html
+++ b/Frontend/OnlineExaminationSystem/src/app/pages/department/department.component.html
@@ -1,1 +1,29 @@
-<p>department works!</p>
+<div class="container-fluid pt-2">
+    <div class="d-grid gap-3">
+        <div class="input-group flex-nowrap">
+            <span class="input-group-text" id="addon-wrapping"><i class="fa fa-search"></i></span>
+            <input type="text" class="form-control" placeholder="type to search.." aria-label="Username" aria-describedby="addon-wrapping">
+        </div>
+    
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                  <th scope="col">Sr.No</th>
+                  <th scope="col">Department Code</th>
+                  <th scope="col">Department Name</th>
+                  <th scope="col">Status</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let department of departments; let i = index" [attr.data-index]="i">
+                  <th scope="row">{{i+1}}</th>
+                  <td>{{department.departmentCode}}</td>
+                  <td>{{department.departmentName}}</td>
+                  <td>{{department.status}}</td>
+                </tr>
+              </tbody>
+        </table>
+    </div>
+    
+</div>
+  
