added tooltip text

--- a/Frontend/OnlineExaminationSystem/src/app/pages/department/department.component.html
+++ b/Frontend/OnlineExaminationSystem/src/app/pages/department/department.component.html
@@ -3,7 +3,7 @@
 
     <div class="basicbuttons d-flex justify-content-end">
       <div class="row">
-          <div>
+          <div class="col">
             <app-filter-fields [fieldNames]='fields' (filterItemEvent)="isFilterChange($event)"></app-filter-fields>
           </div>
       </div>
