--- a/Frontend/OnlineExaminationSystem/src/app/pages/pages.component.html
+++ b/Frontend/OnlineExaminationSystem/src/app/pages/pages.component.html
@@ -2,7 +2,7 @@
  <!-- Sidebar Start -->
  <div [ngClass]="isOpened ? 'vertical-nav-opened' :'vertical-nav-close'">
     <div class="py-4 px-3 mb-4 bg-light">
-      <div class="media d-flex align-items-center">
+      <div class="media d-flex align-items-center justify-content-center">
         <img src="../../assets/Images/oes_logo.png" alt=".." width="100" height="100" class="mr-3  img-thumbnail shadow-sm">
         <!-- <div class="media-body">
           <h4 class="m-0">OLIVIA</h4>
