added create button on department profile

--- a/Frontend/OnlineExaminationSystem/src/app/pages/department/department.component.html
+++ b/Frontend/OnlineExaminationSystem/src/app/pages/department/department.component.html
@@ -4,6 +4,9 @@
     <div class="basicbuttons d-flex justify-content-end">
       <div class="row">
           <div class="col">
+            <app-create-profile-button></app-create-profile-button>
+          </div>
+          <div class="col">
             <app-filter-fields [fieldNames]='fields' (filterItemEvent)="isFilterChange($event)"></app-filter-fields>
           </div>
       </div>
