--- a/Frontend/OnlineExaminationSystem/src/app/pages/filter-fields/filter-fields.component.html
+++ b/Frontend/OnlineExaminationSystem/src/app/pages/filter-fields/filter-fields.component.html
@@ -1,9 +1,9 @@
 <div class="filter-popup">
     <form #filterPage = "ngForm" (ngSubmit) = "onClickSubmit(filterPage.value)" >
     <!-- Button trigger modal Start -->
-    <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <button type="button" class="btn btn-default" data-bs-toggle="modal" data-bs-target="#exampleModal">
         <div data-bs-toggle="tooltip" data-bs-placement="top" title="filter">
-            <i class="fa fa-filter"></i>
+            <i class="fas fa-filter fa-lg"></i>
         </div>
     </button>
     <!-- Button trigger modal End -->
