--- a/Frontend/OnlineExaminationSystem/src/app/auth/login/login.component.html
+++ b/Frontend/OnlineExaminationSystem/src/app/auth/login/login.component.html
@@ -1,20 +1,26 @@
 <div class="container-fluid bg-img">
     <div class="row d-flex justify-content-center">
         <div class="col-12 col-sm-6 col-md-4 col-xs-12">
-            <div class="form-container">
+            <form class="form-container" #loginForm="ngForm" (ngSubmit)="onLogin(loginForm.value)">
                 <p class="h4 text-center">Login Form</p>
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <label for="exampleInputText1" class="form-label">Username</label>
+                    <input type="text" name="userName" class="form-control" ngModel
+                    #usernameInput="ngModel" required>
+                    <div class="invalid-feedback d-block" *ngIf="usernameInput.invalid && usernameInput.touched">
+                        Please enter a Username
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
+                    <input type="password" name="password" class="form-control"  ngModel
+                    #passwordInput="ngModel" required>
+                    <div class="invalid-feedback d-block" *ngIf="passwordInput.invalid && passwordInput.touched">Please enter a Password</div>
                 </div>
                 <div class="d-grid gap-2">
-                    <button class="btn btn-success" type="button">Button</button>
+                    <button class="btn btn-success" type="submit" [disabled]="loginForm.invalid">Button</button>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
