--- a/Frontend/OnlineExaminationSystem/src/app/pages/user-management/user-management.component.html
+++ b/Frontend/OnlineExaminationSystem/src/app/pages/user-management/user-management.component.html
@@ -14,6 +14,24 @@
             </div>
           </div>
           
+          <table class="table table-striped table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Sr.No</th>
+                <th scope="col">User Name</th>
+                <th scope="col">First Name</th>
+                <th scope="col">Last Name</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let user of users | filter : searchField : searchString; let i = index" [attr.data-index]="i">
+                <th scope="row">{{i+1}}</th>
+                <td>{{user.userName}}</td>
+                <td>{{user.firstName}}</td>
+                <td>{{user.lastName}}</td>
+              </tr>
+            </tbody>
+          </table>
           
     </div>
 </div>
